--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/myDb
+spring.datasource.url= jdbc:postgresql://localhost:5432/myBooks
 spring.datasource.username= myUser
 spring.datasource.password= Ml526958
 
 Hibernate=ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
+
+books.cover.dir.path=covers
+
