--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.hibernate.ddl-auto= update
 
 books.cover.dir.path=covers
 
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+
